# paperclips

./: Dockerfile  LICENSE  completions.db  hello.py  pyproject.toml  requirements.txt
instance/: app.db
paperclips/: app.py  config.py  db_service.py  models.py  openai_client.py  openai_service.py
paperclips.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_app.py  test_db_service.py  test_integration.py  test_openai_service.py
